<resources>
    <string name="about_app_version">App Version: 1.6</string>
    <string name="app_name">Star Parenting</string>
    <string name="title_activity_star_process_main">STAR Process</string>
    <string name="title_activity_idea_bank_main">Ideas Bank</string>
    <string name="title_activity_quick_ideas_main">Quick Ideas</string>
    <string name="btn_star_process">STAR Process</string>
    <string name="btn_quick_ideas">Quick Ideas</string>
    <string name="btn_problem_solver">Problem Solving</string>
    <string name="btn_idea_bank">Ideas Bank</string>
    <string name="btn_learn_about">Learning about STAR Parenting</string>
    <string name="title_activity_problem">Ideas Bank</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_learn_about_star">Learning About Star Parenting</string>
    <string name="title_activity_tip_of_the_day">Tip of the Day</string>
    <string name="title_activity_problem_solving_guide">Problem Solving Buddy</string>
    <string name="title_activity_about_this_app">About This App</string>
    <string name="title_activity_learn_about_star_process">STAR Parenting Process</string>
    <string name="about_team_acknowledgement">This app was designed and developed by Jeremy Duke, Mark Pfaff, Mitch Thompson, Rasa Rasiulyte, Travis Kapirsky, and Justin Simmons in the Application Development Program at North Seattle College. </string>
    <string name="about_author_acknowledgement">This app is based on the work of Elizabeth Crary\'s STAR Parenting model.</string>
    <string name="about_book_acknowledgement">This app is based on and a companion to the book <i>STAR Parenting Tales and Tools</i> by Elizabeth Crary.</string>
    <string name="title_activity_star_resources">Star Resources</string>
    <string name="title_activity_star_points">Star Points &amp; Tools</string>
    <string name="problem_solver_description">Tools to help you work through issues as they happen</string>
    <string name="btn_problem_solving_guide">Problem Solving Buddy</string>

    <string name="title_activity_problem_solver">Problem Solving</string>

    <string name="learn_about_heading">What is Star Parenting?</string>
    <string name="learn_about_description">STAR Parenting is a method and a set of points and tools. STAR Parenting is a powerful, focused approach to child guidance. STAR Parenting gives you a problem-solving process,
        5 general strategies, and 15 practical tools. STAR Parenting can be used by parents, teachers, caregivers, counselors – anyone who works with children.</string>
    <string name="resources_description">STAR Resources.</string>
    <string name="learn_about_subheading2">Get Started with Star Parenting</string>
    <string name="learn_about_process_btn">STAR Process</string>
    <string name="problem_solving_btn">Problem Solving Buddy</string>
    <string name="learn_about_points_btn">Star Points</string>
    <string name="learn_about_resources_btn">STAR Resources</string>
    <string name="learn_about_btn_description">We created some activities to help you get ideas about your child and common behaviors you are trying to understand and direct. Tap below to explore the STAR Parenting methods.</string>
    <string name="learn_about_process_title">The STAR Parenting Process</string>
    <string name="learn_about_process_desc">The process is based on the word S-T-A-R and helps you create a plan to resolve your problem. The process encourages you to consider: the child\'s developmental stage and experience, the child\'s temperament, your long-term goals for the child, and your values.</string>
    <string name="learn_about_points_title"><![CDATA[Star Points & Tools]]></string>

    <string name="title_activity_base_navigation_drawer">BaseNavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_test">MainActivityTEST</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TEST</string>
    <string name="toolbar_app_name">STAR Parenting</string>

    <string name="quick_idea_goal">Goal:</string>
    <string name="quick_idea_how">How to use:</string>
    <string name="quick_idea_examples">Examples:</string>
    <string name="quick_ideas_tools_link"><![CDATA[Check out all the Star Points & Tools >]]></string>
    <string name="learn_process_link"><![CDATA[Do the Star Process >]]></string>
    <string name="quick_ideas_intro">Shake your device to get three different parenting tools.</string>
    <string name="learn_about_points_desc">Parenting is easier when have many options. STAR Parenting offers you five strategies (points) and 15 parent-tested tools.</string>


    <string name="problem_solving_guide_title">Problem Solving Guide</string>
    <string name="problem_solving_guide_intro">This is a place to record your progress in applying the full STAR Process to a problem. It is, basically, a form to fill out. The form guides you in considering the steps of the STAR Process and provides a place to record your observations, ideas, and plans. Start by writing a behavioral description of your problem, then continue through the following steps.</string>
    <string name="ps_guide_identifier">Identifier: Enter a word or two so you will recognize this file when you return (e.g., Throwing food).</string>
    <string name="ps_guide_background">Background: Describe the last time the behavior happened</string>
    <string name="ps_guide_stop_text"><![CDATA[Stop & Focus]]></string>
    <string name="ps_guide_next_btn">Next</string>
    <string name="ps_guide_save_btn">Save</string>
    <string name="ps_guide_previous_btn">View Previous</string>
    <string name="ps_guide_stop_title"><![CDATA[Stop & Focus]]></string>
    <string name="stop_focus"><![CDATA[Stop & Focus]]>&#160;&#160;</string>
    <string name="collect_data">Collect Data</string>
    <string name="age_of_child">Age of child</string>
    <string name="problem_length">Length of the problem</string>
    <string name="think_of_ideas">Think of Ideas&#160;&#160;</string>
    <string name="avoid_the_problem">Avoid the Problem</string>
    <string name="change_things">Change Things</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="two_yeses">Two Yeses</string>
    <string name="cooperation">"Respond to cooperation"</string>
    <string name="attention">"Attention"</string>
    <string name="praise">"Praise"</string>
    <string name="rewards">"Rewards"</string>
    <string name="ack_feelings">"Acknowledge Feelings"</string>
    <string name="simple_listening">"Simple Listening"</string>
    <string name="active_listening">"Active Listening"</string>
    <string name="grant_fantasy">"Grant in Fantasy"</string>
    <string name="consequences">"Consequences"</string>
    <string name="set_limits">"Set Limits"</string>
    <string name="clear_rules">"Clear Rules"</string>
    <string name="better_way">"A Better Way"</string>
    <string name="teach_skills">"Teach New Skills"</string>
    <string name="model">"Model"</string>
    <string name="redo_right">"Redo It Right"</string>
    <string name="shaping">"Shaping"</string>
    <string name="act_effectively">Act Effectively&#160;&#160;</string>
    <string name="ideas">Ideas</string>
    <string name="what_will_you_try_first">What will you try first?</string>
    <string name="roadblocks">"Roadblocks"</string>
    <string name="support">"Support"</string>
    <string name="protect">"How can you protect yourself from the problem?"</string>
    <string name="plan">"Make a plan"</string>
    <string name="what_you_need">"What will you need?"</string>
    <string name="how_long">"How long will you continue this plan?"</string>
    <string name="interfere">"What might interfere with your success?"</string>
    <string name="review_and_revise">Review and Revise&#160;&#160;</string>
    <string name="what_went_well">What went well?</string>
    <string name="who_changes">"Who needs to change?"</string>
    <string name="what_next">"What will you try next? For how long?"</string>
    <string name="what_learned">"What have you learned for the future?"</string>

    <string name="psgFrequencyTV">Frequency of behavior</string>
    <string name="psgValuesTV">Values</string>
    <string name="psgValuesListTV">List three values that may be related to the behaviors</string>
    <string name="psgDevelopmentTV">Development</string>
    <string name="psgDevelopmentTV2">What is the child\'s developmental task?</string>
    <string name="psgTemperamentTV">Temperament</string>
    <string name="psgTempListTV">List three traits that might affect this behavior and how intense the traits are</string>
    <string name="psgDesiredTV">Desired behavior</string>
    <string name="psgDesiredTV2">What you want the child to do instread of what they are doing</string>


    <string name="quick_idea_goal_header">What is the goal?</string>
    <string name="btn_star_points2">Tap here to see the all the Star Tools with how-tos and examples</string>
    <string name="tooltip_process">Tap a step to explore \n the STAR Parenting \n Process</string>
    <string name="tooltip_points">Tap the star explore the STAR Points</string>

</resources>
